--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"lint": "eslint"
 	},
 	"dependencies": {
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/sortable": "^10.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@tanstack/react-table": "^8.21.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -21,6 +24,7 @@
 		"react": "19.2.3",
 		"react-day-picker": "^9.13.2",
 		"react-dom": "19.2.3",
+		"react-markdown": "^10.1.0",
 		"recharts": "^2.15.4",
 		"sonner": "^2.0.7",
 		"swr": "^2.4.0",
